<resources>
    <string name="app_name">Sleep</string>
    <string name="day">day</string>
    <string name="week">week</string>
    <string name="month">month</string>
    <string name="Data">Data</string>
    <string name="Analysis">Analysis</string>
    <string name="connect">connect</string>
    <string name="time">TIME</string>
    <string name="stage1">stage1</string>
    <string name="stage2">stage2</string>
    <string name="stage3">stage3</string>
    <string name="stage4">stage4</string>
    <string name="rem">REM</string>
    <string name="onehour">1.0h</string>
    <string name="fivehour">5.0h</string>
    <string name="total">Total</string>
    <string name="your_sleep">Your Sleep</string>
    <string name="sleep_knowledge">Sleep Tips</string>
    <string name="eeg_waves">|EEG WAVES</string>
    <string name="good">Good</string>
    <string name="well">Well</string>
    <string name="bad">Bad</string>
    <string name="set">Set</string>
    <string name="pic1">How long sleep to be effective?</string>
    <string name="pic2">Do you know the six stages of sleep?</string>
    <string name="pic3">How to assess the sleep time you need?</string>
    <string name="help">Help</string>
    <string name="username">username</string>
    <string name="data_collection">Data Collection</string>
    <string name="analysis_advices">Analysis&amp;Advices</string>
    <string name="day_advice_title">According to your xx day sleep test:</string>
    <string name="day_advice">Data analysis recommendations Data analysis recommendations Data analysis recommendations, Data analysis recommendations Data analysis recommendations Data analysis recommendations, Data analysis recommendations Data analysis recommendations Data analysis recommendations</string>
    <string name="week_advice_title">Depending on your monitor nearly a week of sleep:</string>
    <string name="week_advice">Data analysis recommendations Data analysis recommendations Data analysis recommendations, Data analysis recommendations Data analysis recommendations Data analysis recommendations, Data analysis recommendations Data analysis recommendations Data analysis recommendations</string>
    <string name="sleep_mall">Sleep Mall</string>
    <string name="perceptual_evaluation">This month sleep is not very stable yet, username.</string>
    <string name="thoughtful_advice">After your busy work, let yourself sleep well. The body is the capital of struggle.</string>
</resources>
