<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <!--<ImageButton
            android:id="@+id/top_account"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_toStartOf="@+id/top_textView"
            android:background="@drawable/account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />-->

        <TextView
            android:id="@+id/top_textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/tahu_"
            android:text="@string/Data"
            android:textColor="@color/colorTitle"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/top_line"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/top_line"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/top_line"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/id_tab_day"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/day"
                android:textAllCaps="?android:attr/windowOverscan"
                android:textSize="20sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/id_tab_week"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/week"
                android:textAllCaps="?android:attr/windowOverscan"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_tab_month"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/month"
                android:textAllCaps="?android:attr/windowOverscan"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
