<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/top_textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="4dp"
            android:text="@string/Analysis"
            android:textColor="@color/colorTitle"
            android:textSize="25sp"
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_constraintEnd_toStartOf="@+id/top_line"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/top_line"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/top_line"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/id_tab_your_sleep"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_your_sleep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/your_sleep"
                android:textAllCaps="?android:attr/windowOverscan"
                android:textSize="20sp"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/id_tab_sleep_tips"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_sleep_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/sleep_knowledge"
                android:textAllCaps="?android:attr/windowOverscan"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
