<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/imageButton"
        android:layout_width="286dp"
        android:layout_height="136dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:contentDescription="@string/pic2"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        app:srcCompat="@drawable/timepic_two" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/imageButton2"
        android:layout_width="286dp"
        android:layout_height="136dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:contentDescription="@string/pic1"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/timepic_one" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/imageButton3"
        android:layout_width="286dp"
        android:layout_height="136dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:contentDescription="@string/pic3"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:srcCompat="@drawable/timepic_three" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pic1"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="@+id/imageButton2" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pic2"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/imageButton" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pic3"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/imageButton3"
        app:layout_constraintTop_toTopOf="@+id/imageButton3" />
</android.support.constraint.ConstraintLayout>